--- a/v101/content/diskussion.tex
+++ b/v101/content/diskussion.tex
@@ -8,12 +8,12 @@ möglicherweise defekt waren. Ein systematischer Fehler ist ebenfalls nicht ausz
 Wertes der Winkelrichtgröße $D = \qty{0.048 +- 0.012}{\newton\metre\per\radian}$ mangelhaft, was sich auch auf die folgenden experimentellen Werte auswirkt. Bei der Bestimmung 
 des Eigenträgheitsmoments $I_D$ sollte der Metallstab als masselos angenommen werden. Dies ist jedoch nicht sinnvoll, da die Masse des Stabes im Vergleich zu jener der Drehachse
 selbst groß ist und somit, auch durch die waagerechte Ausrichtung des Stabs, das bestimmte Eigenträgheitsmoment $I_D = \qty{6.2 +- 1.6}{\gram\square\metre}$ wohl zu einem großen
-Teil auf das Trägheitsmoment des Stabs zurückzuführen ist. Wie in \autoref{subsec:A_Apparatenkonstanten} wurde der eigentliche Wert des Eigenträgheitsmoments als vernachlässigbar
+Teil auf das Trägheitsmoment des Stabes zurückzuführen ist. Wie in \autoref{subsec:A_Apparatenkonstanten} beschrieben wurde der eigentliche Wert des Eigenträgheitsmoments als vernachlässigbar
 klein angenommen.
 
 Bei der Bestimmung der Trägheitsmomente der Kugel und des Zylinders ergaben sich die Werte $I_{\text{z,theo}} = \qty{0.444}{\gram\metre\squared}$ und 
 $I_{\text{z,exp}} = \qty{0.70+-0.18}{\gram\metre\squared}$ für den Zylinder, sowie $I_{\text{k,theo}} = \qty{2.53}{\gram\metre\squared}$ und 
-$I_{\text{k,exp}} = \qty{4.2+-1.1}{\gram\metre\squared}$ für die Kugel. Die relative Abweichung eines Messwertes $x$ zu einem Theoriewert $x^*$ lässt sich dabei über den
+$I_{\text{k,exp}} = \qty{4.2+-1.1}{\gram\metre\squared}$ für die Kugel. Die relative Abweichung eines Messwertes $x$ zu einem Theoriewert $x^*$ lässt sich über den
 Zusammenhang
 \begin{equation}
     \label{eqn:rel_Abw}
@@ -23,11 +23,11 @@ berechnen. Damit folgt für die relativen Abweichungen $\symup{\Delta_\text{rel}
 $\symup{\Delta_\text{rel}}(I_\text{k}) = \qty{65.62}{\percent}$. Ursachen für diese starken Abweichungen sind die zuvor beschriebene schlechte Güte der Winkelrichtgröße und 
 Ungenauigkeiten in der Zeitmessung der Periodendauer.
 
-Bei der Bestimmung der Trägheitsmomente der Modellpuppe ergaben sich die Werte $I_{1,\text{,theo}} = \qty{0.246+-0.040}{\gram\metre\squared}$ und 
+Bei der Bestimmung der Trägheitsmomente der Modellpuppe ergaben sich die Werte $I_{1\text{,theo}} = \qty{0.246+-0.040}{\gram\metre\squared}$ und 
 $I_{1\text{,exp}} = \qty{0.684+-0.180}{\gram\metre\squared}$ für die erste Stellung, sowie $I_{2\text{,theo}} = \qty{0.247+-0.037}{\gram\metre\squared}$ und 
-$I_{2\text{,exp}} = \qty{0.493+-0.125}{\gram\metre\squared}$. Nach \autoref{eqn:rel_Abw} ergeben sich die relativen Abweichungen 
-$\symup{\Delta_\text{rel}}(I_1) = \qty{99.51}{\percent}$ und $\symup{\Delta_\text{rel}}(I_2) = \qty{177.97}{\percent}$. Diese extremen Abweichungen können nur zum Teil
-auf die zuvor genannten Ursachen zurückgeführt werden. Ein weiterer Grund ist, dass die theoretischen Trägheitsmomente durch Näherung der Modellpuppe mittels Zylinder berechnet
+$I_{2\text{,exp}} = \qty{0.493+-0.125}{\gram\metre\squared}$ für die zweite Stellung. Nach \autoref{eqn:rel_Abw} ergeben sich die relativen Abweichungen 
+$\symup{\Delta_\text{rel}}(I_1) = \qty{99.51}{\percent}$ und $\symup{\Delta_\text{rel}}(I_2) = \qty{177.97}{\percent}$. Diese großen Abweichungen können nur zum Teil
+auf die zuvor genannten Ursachen zurückgeführt werden. Ein weiterer Grund ist, dass die theoretischen Trägheitsmomente durch Näherung der Modellpuppe mittels Zylindern berechnet
 wurden, was nur grob der Realität entspricht. Die Gelenke der Puppe, der Metallstab der Halterung und eventuelle Neigungen der Gliedmaßen wurden vernachlässigt.
 
 Insgesamt ergeben sich bei allen Messungen des Versuchs starke Abweichung, die teilweise auf systematische Fehler, aber auch auf Näherungen zurückzuführen sind. Besonders die 
