--- a/v101/content/theorie.tex
+++ b/v101/content/theorie.tex
@@ -1,7 +1,7 @@
 \section{Ziel}
 \label{sec:Ziel}
-In diesem Versuch sollen die Trägheitsmomente zweier Körper und einer Modellpuppe experimentell ermittelt werden. Die experimentell Bestimmten Trägheitsmomente lassen sich
-anschließend mit den theoretisch berechneten Werten vergleichen um den \textit{Steiner'schen Satz} zu verifizieren. 
+Ziel des Versuches ist die experimentelle Bestimmung der Trägheitsmomente verschiedener Körper und einer Modellpuppe über die Schwingungsdauer. Dabei werden die Körper 
+mithilfe einer Feder an einer Drillachse in Schwingung versetzt.
 
 \section{Theorie}
 \label{sec:Theorie}
@@ -13,7 +13,7 @@ Dichte $\rho(r)$
     I = \int r^2 \symup{d}m = \int_V \rho(r) r^2 \symup{d}V
 \end{equation}
 für das Trägheitsmoment bezüglich einer Achse durch den Körperschwerpunkt. Verläuft die Drehachse nicht durch den Schwerpunkt des Körpers, lässt sich das Trägheitsmoment 
-bezüglich dieser Achse mithilfe des Steiner'schen Satzes berechnen. Dieser liefert für eine Drehchse, welche parallel zu einer Achse durch den Schwerpunkt liegt und den Abstand
+bezüglich dieser Achse mithilfe des \textit{Steiner'schen Satzes} berechnen. Dieser liefert für eine Drehchse, welche parallel zu einer Achse durch den Schwerpunkt liegt und den Abstand
 $a$ zu dieser hat, das Trägheitsmoment 
 \begin{equation}
     \label{eqn:Steiner}
@@ -36,7 +36,7 @@ Das beschriebene System ist ein Beispiel eines harmonischen Oszillators, dessen 
     \label{eqn:Schwingungsdauer}
     T = 2\pi \sqrt{\frac{I}{D}}
 \end{equation}
-gelöst wird. $D$ ist dabei die Winkelrichtgröße (\textit{Direktionsmoment}), welche der Federkonstante bei einer Translation entspricht. Aus dieser Gleichung lässt sich das 
+gelöst wird. $D$ ist dabei die Winkelrichtgröße (\textit{Direktionsmoment}), welche eine Apparatenkonstante der Feder ist. Aus dieser Gleichung lässt sich das 
 Drehmoment des Körpers --abzüglich des Eigenträgheitsmoments $I_\text{D}$ der Drehachse selbst-- zu
 \begin{equation}
     \label{eqn:I_K}
