--- a/v101/content/durchfuehrung.tex
+++ b/v101/content/durchfuehrung.tex
@@ -46,3 +46,22 @@ Zuletzt werden die Trägheitsmomente einer Modellpuppe aus Holz in verschiedenen
 Die Holzpuppe wird an ihrem Stab in die Drill-Achse eingespannt. Zunächst wird sie in Stellung 1 gebracht, welche in \autoref{fig:D_Holzpuppe1} zusehen ist. In dieser Stellung wird die Figur fünf 
 mal um $90\unit{\degree}$ und weitere fünf mal um $120\unit{\degree}$ ausgelenkt. Dabei werden je drei Periodendauern gemessen und der Mittelwert gebildet. Dieses Verfahren wird für 
 Stellung 2, welche \autoref{fig:D_Holzpuppe2} entnommen werden kenn, erneut durchgeführt. 
+
+\begin{figure}
+    \centering
+    \begin{subfigure}{0.4\textwidth}
+        \centering
+        \includegraphics[width=0.65\textwidth]{content/Ballet3.jpg}
+        \caption{Stellung 1}
+        \label{fig:D_Holzpuppe1}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.48\textwidth}
+        \centering
+        \includegraphics[width=0.8\textwidth]{content/T_Pose3.jpg}
+        \caption{Stellung 2}
+        \label{fig:D_Holzpuppe2}
+    \end{subfigure}    
+    \caption{Verschiedene Stellungen der Holzpuppe, welche auf der Drillachse montiert ist.}
+    \label{fig:D_subfig}
+\end{figure}
